--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vente d'iPhones - iPhone Shop Chebana</title>
+    <title>Vente d'iPhones - iPhone Shop MOOSTA</title>
     <meta name="description" content="Boutique spécialisée dans la vente d'iPhones reconditionnés et accessoires à prix attractifs">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,7 +11,7 @@
     <!-- En-tête avec le logo et le slogan -->
     <header>
         <div class="logo-container">
-            <h1>iPhone Shop Chebana</h1>
+            <h1>iPhone Shop MOOSTA</h1>
             <img src="image/MOI.jpg" alt="Logo iPhone Shop" class="logo">
             <div>    
             <p class="slogan">Notre spécialiste en iPhones reconditionnés de qualité</p>
@@ -248,9 +248,10 @@
                 <p>Horaires: Tous les jours , 24h/24h</p>
             </div>
             <div class="legal-info">
-                <p>&copy; 2025 iPhone Shop Chebana. Tous droits réservés.</p>
-                <p>Livraison disponible avec frais par tous aux Comores 
-                          YEYA  PVENGNA  HALATSA </p>
+                <p>&copy; 2025 iPhone Shop MOOSTA. Tous droits réservés.</p>
+                <p>Livraison disponible avec frais par tous aux Comores</p> 
+            </p>Faitent vos commandes</p>  
+        </p>YEYA  PVENGNA  HALATSA </p>
             </div>
         </div>
     </footer>
